# is-ai-agent

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: release.yml
examples/: detect.rs
src/: lib.rs
tests/: detect.rs
